<resources>
    <string name="app_name">MyCiteUniv</string>
    <string name="title_activity_autre_acitivity">Autre_acitivity</string>
    <string name="textfield_label">Numero Chambre</string>
    <string name="textfield_label1">Code Permanent</string>
    <string name="textfield_label12">Nom</string>
    <string name="textfield_label13">Filiere</string>
    <string name="textfield_label14">Niveau</string>
    <string name="textfield_label15">CNI</string>
    <string name="textfield_label16">Tel</string>
    <string name="reservation">Faire une reservation au pavillon A</string>
    <string name="motPasse">Mot de Passe</string>
    <string name="codePerm">Code Permanent</string>
    <string name="orangeMoney">Envoyer le paiement sur ce numero: 772040788</string>
    <string name="cash">Passer au 1A si vous etes au campus 1 ou au 30D si vous etes au Campus 2</string>
    <string name="item_default_num">Numero Reservation</string>
    <string name="switch_text">valider</string>

    <string-array name="chambres">
        <item>chambre1</item>
        <item>chambre2</item>
        <item>chambre3</item>
        <item>chambre4</item>
    </string-array>

    <string-array name="reservation">
        <item>reservation 1</item>
        <item>reservation 2</item>
        <item>reservation 3</item>
    </string-array>
</resources>
